<resources>
    <string name="app_name">GDLauncher</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="time000">00:00:00</string>
    <string name="time00">00:00</string>
    <string name="def_time">08 00</string>
    <string name="def_date">1月1日\n星期一</string>
    <string name="time_colon">:</string>

    <string name="updating">Upgrading Resource &#8230;</string>
    <string name="sun">Sun</string>
    <string name="channel_list">Channel List</string>
    <string name="movie_content">Movie Detail</string>
    <string name="play">Play</string>
    <string name="intru">Brief Introduction</string>
    <string name="input_psw">Please input password</string>
    <string name="back">Back</string>
    <string name="about_us">About Us</string>
    <string name="golding">Guangdong Golding Mobile Media Co., Ltd</string>
    <string name="car_num">Plate Number</string>
    <string name="seat_num">Seat  ID</string>

    <string name="hot_zone">Favor</string>
    <string name="movies_show">Media</string>
    <string name="golind_media">ADs</string>
    <string name="game_center">Game</string>
    <string name="e_line">e-Online</string>
    <string name="my_app">APPs</string>


    <string name="movie">Movie</string>
    <string name="comic">Cartoon</string>
    <string name="sports">Sports</string>
    <string name="tv_show">Arts</string>
    <string name="drama">Drama</string>
    <string name="mtv">MTV</string>
    <string name="music">Music</string>

    <string name="huizhou">HuiZhou</string>

    <!--我的应用-->
    <!--设置-->
    <string name="contrast">Brightness</string>
    <!--工程模式-->
    <string name="engmode">Engineering Mode</string>
    <string name="reset">此号已被其他位置设置，确定设置该座位号吗？</string>
    <string name="seathint">please  set  Seat  Number &#8230;</string>
    <string name="empty">please  set  Seat  Number！</string>
    <string name="row">Row ：</string>
    <string name="col">Column  ：</string>
    <string name="seat_row_col">请输入小于31的数字！</string>
    <string name="seat_add">Please Add Seat Number！</string>
    <string name="plan">Plan</string>
    <string name="addtable">Add</string>
    <string name="cancletable">Cancel</string>
    <string name="addfinish">Finish</string>
    <string name="clear">Clean</string>
    <string name="whole_seat_empty">Clean Up</string>
    <string name="whole_seat_set">Vehicle Settings</string>
    <string name="whole_seat_off">Shut Off</string>
    <string name="tips_empty">确定【清空】全车座位号吗？</string>
    <string name="tips_whole_seat_set">确定【打开】全车设置窗口吗？</string>
    <string name="tips_whole_seat_off">确定【关闭】全车设置窗口吗？</string>
    <string name="seat_nochange">座位【没有】改动，确定完成吗？</string>
    <string name="seat_change">座位【已经】改动，确定完成吗？</string>
    <string name="setsuccess">设置成功</string>
    <string name="setfailed">设置失败</string>
    <string name="netdisc">请检查网络！！</string>
    <string name="cannotOpenApp">不能打开这个应用!</string>
    <string name="withoutThisApp">没有这个应用！</string>
    <string name="pwdAgain">请再次输入您的密码！</string>
    <string name="pwderr">密码错误！</string>
    <string name="whole_car_uninstall">全车卸载该应用</string>
    <string name="flash">Burn</string>
    <string name="flashinic">Burn INIC</string>
    <string name="burning_inic">Burning，Please Wait。。。</string>
    <string name="failure_inic">INIC Most Flash Error！</string>
    <string name="finish_inic">INIC Most Flash OK！</string>
    <string name="timeout_inic">INIC Most Flash Time Out！</string>
    <!--工程模式END-->
    <!--设置END-->
    <!--我的应用END-->

    <!--e-在线-->
    <string name="hotel_name">Hotel Name</string>
    <string name="profile">Brief Introduction</string>
    <!--e-在线END-->

    <!--播放器-->
    <string name="singer">Singer:</string>
    <string name="album">Album:</string>
    <string name="name">Name:</string>
    <string name="nolrc">No LRC File</string>
    <string name="time_string_music">"%1$02d:%2$02d"</string>
    <string name="time_string_movie">"%1$02d:%2$02d:%3$02d"</string>

    <string name="paid_tips1">您可以免费观看前</string>
    <string name="paid_tips2">分钟，完整观看请</string>
    <string name="paid_tips3">立即购买</string>
    <string name="wechat_easy_payment">微信轻松付款！</string>
    <string name="disconnect_to_server">无法连接服务器！</string>
    <string name="network_anomaly">网络异常！</string>
    <string name="program_exception">程序异常！</string>
    <string name="qrcode_err">获取二维码失败！</string>
    <string name="getting_qrcode">正在获取二维码</string>
    <string name="nofile">File not exist</string>

    <string name="eq0">0</string>
    <string name="eq10">10</string>
    <string name="eqn10">-10</string>
    <string name="eq100">100</string>
    <string name="eq500">500</string>
    <string name="eq1k">1K</string>
    <string name="eq4k">4K</string>
    <string name="eq16k">16K</string>
    <!--播放器END-->

    <string name="download_tips">"Downloading data (%1$s), please wait &#8230;"</string>
    <string name="unzip">"Is extracting %1$s data(%2$s), please wait &#8230;"</string>
    <string name="map">"map"</string>
    <string name="apk">"apk"</string>
    <string name="lrc">"lrc"</string>
    <string name="xml">"xml"</string>
    <string name="img">"img"</string>
    <string name="update">"update"</string>
    <string name="custom">"custom"</string>
    <string name="sysdata">"System Data"</string>
    <string name="ebooks">"Ebooks "</string>
    <string name="windowAd">Window Ad</string>
    <string name="jtv">Jtv</string>
    <string name="jmagazine">Jmagazine</string>
    <string name="jmall">Jmall</string>
    <string name="windowTop">WindowTop</string>
    <string name="windowMiddle">WindowMiddle</string>
    <string name="windowBottom">WindowBottom</string>
    <string name="windowCrossbar">WindowCrossbar</string>
    <string name="windowText">WindowText</string>
    <string name="guangdongTv">GuangdongTv</string>
    <string name="evenAd">EvenAd</string>
    <string name="famGodGrass">FamGodGrass</string>
    <string name="financialEye">FinancialEye</string>
    <string name="orangeFlavor">OrangeFlavor</string>
    <string name="securityVideo">SecurityVideo</string>
    <string name="seaWhale">SeaWhale</string>
    <string name="bingYan">BingYan</string>

    <string name="_null"></string>
    <string name="zero">0</string>
    <string name="zeropercent">0%</string>

    <string name="str_0">0</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_a">A</string>
    <string name="str_b">B</string>
    <string name="str_c">C</string>
    <string name="str_d">D</string>
    <string name="str_e">E</string>
    <string name="str_f">F</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="slash">/</string>
    <string name="line">-</string>
    <string name="enter">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete </string>

    <string name="toast_line">-------------------------------------------------------------------------------</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_us_txt">Guangdong Golding Mobile Media Co., Ltd was founded in 2006. Goldings RD centre was established in No.5 District, Zhongkai High-tech Industrial Development Zone, HuiZhou. Goldings operational headquarters located at room 2706, One Midtown, 11 Hoi Shing Road, Tusen Wan, Hong Kong. Goldings TV production center located at No. 88 YangyanRoad, Huairou District, Beijing. Golding jointed with research institutions to develop the system for more than 6 years since 2008 in the field of multi nodes fibre-optical networking transmission of MOST technology.  Golding provided interactive multimedia entertainment information system to the buses, intercity high-speed rails, cruise ships, airplanes and opera houses etc. Our interactive multimedia business includes free monthly magazine of JOY Magazine, interactive TV of JTV and e-commerce platform of Jmall. With more than 20 ownerships of intellectual property and publishing rights, Goldings networking system covers Hong Kong, Macau, and some regions of Pearl River Delta.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="master_id">Master ID：</string>
    <string name="device_id">Device ID：</string>
    <string name="mac">Mac：</string>
    <string name="ip">MOST IP：</string>
    <string name="sys_ver">System Information ：</string>
    <string name="app_ver">Application Version：</string>
    <string name="sys_total_m">System Capacity ：</string>
    <string name="sys_free_m">Remaining Capacity ：</string>
    <string name="sys_memory">Storage Capacity：</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="zn">Chinese(Simplified)</string>
    <string name="tw">Chinese(Traditional)</string>
    <string name="en">English</string>
    <string name="open">OPEN</string>
    <string name="movie_info">Movie Title: %1$s\nDirector: %2$s\nStarring: %3$s\nType: %4$s\n%5$s</string>
    <string name="details">Details:%s</string>
    <string name="songs">Songs:%s</string>
    <string name="artists">Artists:%s</string>
    <string name="albums">Albums:%s</string>
    <string name="payAndFree">Payment Amount: %1$d CNY\nFree Entitlement: %2$d Min</string>

    <string name="mtvinfo">Songs:%1$s\nArtists:%2$s\nAlbums:%3$s</string>
    <string name="loading">Loading page,please wait &#8230;</string>

    <string name="screen_off">关闭屏幕</string>
    <string name="screen_off_msg">确定要关闭屏幕吗？</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
