<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="80px"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/master_id" />

        <TextView
            android:id="@+id/master_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/device_id" />

        <TextView
            android:id="@+id/device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/mac" />

        <TextView
            android:id="@+id/mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/ip" />

        <TextView
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/sys_ver" />

        <TextView
            android:id="@+id/sysVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/app_ver" />

        <TextView
            android:id="@+id/appVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/sys_total_m" />

        <TextView
            android:id="@+id/total_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/sys_free_m" />

        <TextView
            android:id="@+id/free_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px"
            android:text="@string/sys_memory" />

        <TextView
            android:id="@+id/memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25px" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onBack"
            android:background="@drawable/back_selector" />

    </RelativeLayout>


</LinearLayout>
